[tool.poetry]
name = "ts_bolt"
version = "0.0.1"
description = "The Lightning Bolt for Time Series Data and Models"
authors = ["LM <hi@leima.is>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.2"
torch = "^1.13.1"
pytorch-lightning = "^1.8.6"
loguru = "^0.6.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"