[tool.poetry]
name = "ts_bolt"
version = "0.0.2"
description = "The Lightning Bolt for Time Series Data and Models"
authors = ["LM <hi@leima.is>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.2"
torch = "^1.13.1"
pytorch-lightning = "^1.8.6"
loguru = "^0.6.0"
click = "^8.1.3"
gluonts = "^0.11.7"
cloudpathlib = "^0.12.1"
strenum = "^0.4.9"
pydantic = "^1.10.4"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.5"
mkdocstrings = {version = "^0.19.1", extras = ["python"]}
mkdocstrings-python = "^0.8.3"
mkdocs-autorefs = "^0.4.1"


[tool.poetry.scripts]
bolt = "ts_bolt.cli:bolt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
