[tool.poetry]
name = "ts_bolt"
version = "0.0.7"
description = "The Lightning Bolt for Time Series Data and Models"
authors = ["LM <hi@leima.is>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=1.13.1"
loguru = "^0.7.2"
click = "^8.1.3"
cloudpathlib = "^0.16.0"
strenum = "^0.4.9"
pydantic = ">=1.10.4,<2.0"
requests = "^2.28.2"
lightning = "^2.1.0"
pandas = "^2.1.1"
scipy = "^1.11.3"
multidict = "^6.0.5"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.9"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = {version="^0.25.1",extras=["python"]}
griffe = "^0.48.0"
mkdocstrings-python = "^1.10.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pylama = "^8.4.1"


[tool.poetry.group.gluonts.dependencies]
gluonts = "^0.13.6"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
# https://pydantic-docs.helpmanual.io/mypy_plugin/#configuring-the-plugin
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.poetry.scripts]
bolt = "ts_bolt.cli:bolt"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
